tools/editor-plugin/metascript.nvim/tree-sitter/grammar.js
    program: $ => repeat($._statement),

    // =========================================================================
    // Statements
    // =========================================================================

    _statement: $ => choice(
      $.import_statement,
      $.export_statement,
      $.class_declaration,
      $.actor_declaration,
      $.interface_declaration,
      $.struct_declaration,
      $.enum_declaration,
      $.function_declaration,
      $.macro_declaration,
      $.extern_declaration,
      $.variable_declaration,
      $.type_alias_declaration,
      $.test_declaration,
      $.expect_statement,
      $.defer_statement,
      $.return_statement,
      $.unreachable_statement,
      $.if_statement,
      $.switch_statement,
      $.for_statement,
      $.for_of_statement,
      $.for_in_statement,
      $.while_statement,
      $.do_while_statement,
      $.break_statement,
      $.continue_statement,
      $.labeled_statement,
      $.macro_directive_statement,
      $.expression_statement,
      $.block,
    ),

    // =========================================================================
    // Imports / Exports
    // =========================================================================

    function_declaration: $ => seq(
      repeat($.macro_decorator),
      optional('async'),
      'function',
      field('name', $._identifier_or_keyword),
      optional($.type_parameters),
      $.parameters,
      optional($.type_annotation),
      field('body', $.function_body),
    ),

    // Function body can contain @extern statements
    function_body: $ => seq('{', repeat($.function_body_statement), '}'),

    function_body_statement: $ => choice(
      $.macro_extern_statement,
      $.macro_target_block,
      $.macro_emit_statement,
      $._statement,
    ),

    // Metascript: macro declaration
    // Syntax: macro name(params) { ... }
    // Usage: name(args) - called like normal function
    variable_declaration: $ => seq(
      choice('const', 'let', 'var'),
      field('name', $.identifier),
      optional($.type_annotation),
      optional(seq('=', $._expression)),
      ';',
    ),

    // Type alias with optional distinct
    _type_identifier: $ => alias($.identifier, $.type_identifier),

    type_annotation: $ => seq(':', $.type),

    type: $ => choice(
      $.primitive_type,
      $.metascript_type,
      $._type_identifier,  // Use type_identifier for user-defined types
      $.array_type,
      $.union_type,
      $.intersection_type,
      $.generic_type,
      $.function_type,      // (T) => U - closure/function type
      $.parenthesized_type, // (T) - for grouping in complex types
      $.object_type,        // { name: string, age: number }
    ),

    primitive_type: $ => choice(
      'string', 'number', 'boolean', 'char', 'void', 'any', 'unknown', 'never',
    ),

    parameters: $ => seq('(', optional(commaSep1($.parameter)), ')'),

    parameter: $ => choice(
      // Instance extension receiver: function trim(this self: string): string
      // The 'this' keyword followed by name: Type makes it a method on that type
      $.this_parameter,
      // Normal parameter: name: type = default (allow keywords like 'set', 'map')
      seq(
        optional('...'),  // Rest/variadic parameter
        field('name', $._identifier_or_keyword),
        optional($.type_annotation),
        optional(seq('=', $._expression)),
      ),
    ),

    // Extension method receiver parameter
    // Instance: this name: Type (e.g., this self: string, this set: Set<T>)
    // Static: this typeof Type (e.g., this typeof Promise)
    block: $ => seq('{', repeat($._statement), '}'),

    return_statement: $ => seq('return', optional($._expression), ';'),

    if_statement: $ => prec.right(seq(
      'if', '(', $._expression, ')', $._statement,
      optional(seq('else', $._statement)),
    )),

    while_statement: $ => seq('while', '(', $._expression, ')', $._statement),

    // do { body } while (condition);
    do_while_statement: $ => seq(
      'do',
      field('body', $._statement),
      'while',
      '(',
      field('condition', $._expression),
      ')',
      optional(';'),
    ),

    // switch (expr) { case value: ... default: ... }
    switch_statement: $ => seq(
      'switch',
      '(',
      field('discriminant', $._expression),
      ')',
      field('body', $.switch_body),
    ),

    switch_body: $ => seq(
      '{',
      repeat(choice($.switch_case, $.switch_default)),
      '}',
    ),

    switch_case: $ => seq(
      'case',
      field('test', $._expression),
      ':',
      repeat($._statement),
    ),

    switch_default: $ => seq(
      'default',
      ':',
      repeat($._statement),
    ),

    // for (const x of iterable) { ... }
    for_of_statement: $ => seq(
      'for',
      optional('await'),  // for await (const x of asyncIterable)
      '(',
      field('kind', choice('const', 'let', 'var')),
      field('name', $.identifier),
      'of',
      field('iterable', $._expression),
      ')',
      field('body', $._statement),
    ),

    // for (const k in obj) { ... }
    break_statement: $ => seq(
      'break',
      optional(field('label', $.identifier)),
      ';',
    ),

    // continue; or continue label;
    continue_statement: $ => seq(
      'continue',
      optional(field('label', $.identifier)),
      ';',
    ),

    // label: statement
    labeled_statement: $ => seq(
      field('label', $.identifier),
      ':',
      field('body', $._statement),
    ),

    expression_statement: $ => seq($._expression, ';'),

    // =========================================================================
    // Expressions
    // =========================================================================

    _expression: $ => choice(
      $.identifier,
      $.number,
      $.string,
      $.boolean,
      $.null,
      $.undefined,
      $.this,
      $.assignment_expression,
      $.ternary_expression,
      $.binary_expression,
      $.unary_expression,
      $.await_expression,
      $.try_expression,
      $.call_expression,
      $.generic_call_expression,
      $.member_expression,
      $.subscript_expression,
      $.deref_expression,
      $.new_expression,
      $.array,
      $.object,
      $.arrow_function,
      $.parenthesized_expression,
      $.macro_comptime,
      $.macro_emit_expr,
      $.match_expression,
      $.type_assertion_expression,
      $.update_expression,
      // JSX expressions
      $.jsx_element,
      $.jsx_fragment,
    ),

    assignment_expression: $ => prec.right(1, seq(
      field('left', choice($.identifier, $.member_expression, $.subscript_expression, $.deref_expression)),
      choice('=', '+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>=', '>>>='),
      field('right', $._expression),
    )),

    binary_expression: $ => choice(
      prec.left(12, seq($._expression, '*', $._expression)),
      prec.left(12, seq($._expression, '/', $._expression)),
      prec.left(12, seq($._expression, '%', $._expression)),
      prec.left(11, seq($._expression, '+', $._expression)),
      prec.left(11, seq($._expression, '-', $._expression)),
      prec.left(10, seq($._expression, '<<', $._expression)),
      prec.left(10, seq($._expression, '>>', $._expression)),
      prec.left(10, seq($._expression, '>>>', $._expression)),
      prec.left(9, seq($._expression, '<', $._expression)),
      prec.left(9, seq($._expression, '>', $._expression)),
      prec.left(9, seq($._expression, '<=', $._expression)),
      prec.left(9, seq($._expression, '>=', $._expression)),
      prec.left(8, seq($._expression, '===', $._expression)),
      prec.left(8, seq($._expression, '!==', $._expression)),
      prec.left(8, seq($._expression, '==', $._expression)),
      prec.left(8, seq($._expression, '!=', $._expression)),
      prec.left(7, seq($._expression, '&', $._expression)),
      prec.left(6, seq($._expression, '^', $._expression)),
      prec.left(5, seq($._expression, '|', $._expression)),
      prec.left(4, seq($._expression, '&&', $._expression)),
      prec.left(3, seq($._expression, '||', $._expression)),
      prec.left(3, seq($._expression, '??', $._expression)),
      prec.left(2, seq($._expression, '..', $._expression)),
      prec.left(2, seq($._expression, '...', $._expression)),
      prec.left(1, seq($._expression, '|>', $._expression)),
      prec.right(13, seq($._expression, '**', $._expression)),
    ),

    await_expression: $ => prec(14, seq('await', $._expression)),

    // try expression for Result unwrapping: try expr or try expr catch default
    call_expression: $ => prec(18, seq(
      field('function', $._expression),
      field('arguments', $.arguments),
    )),

    // Generic call: foo<T>(x), obj.method<T>(x)
    // External scanner resolves '<' as type args (not comparison)
    arguments: $ => seq('(', optional(commaSep1($._expression)), ')'),

    member_expression: $ => prec(18, seq(
      field('object', $._expression),
      '.',
      field('property', $._identifier_or_keyword),
    )),

    // Subscript/index expression: obj[key], arr[0]
    subscript_expression: $ => prec(18, seq(
      field('object', $._expression),
      '[',
      field('index', $._expression),
      ']',
    )),

    parenthesized_expression: $ => prec(-1, seq('(', $._expression, ')')),

    // =========================================================================
    // JSX (TypeScript/React-style)
    // =========================================================================

    // JSX element: <div>...</div> or <Component prop={val} />
    identifier: $ => token(/[a-zA-Z_$][a-zA-Z0-9_$]*/),

    // Backtick-quoted operator identifier: `==`, `<`, `!=`, `[]`, `[]=`, `+`, etc.
    // Used as function/method names for operator overloading.
    // Higher precedence than template_string to avoid ambiguity in function-name position.
    number: $ => choice(
      /0[xX][0-9a-fA-F_]+[n]?/,
      /0[bB][01_]+[n]?/,
      /0[oO][0-7_]+[n]?/,
      /\d[0-9_]*(\.[0-9_]+)?([eE][+-]?\d+)?/,
      /\d[0-9_]*n/,
    ),

    string: $ => choice(
      // Use token() to make strings atomic - prevents // inside strings from being parsed as comments
      token(seq('"', repeat(choice(/[^"\\]/, /\\./)), '"')),
      token(seq("'", repeat(choice(/[^'\\]/, /\\./)), "'")),
      $.template_string,
    ),

    _identifier_or_keyword: $ => choice(
      $.identifier,
      $.operator_identifier,
      $._contextual_keyword,
    ),
